Improved exercise form & more
-Exercise form improvements.
-Jumbotron now only on intro page.
-Some schema validation

--- a/app_server/views/account.pug
+++ b/app_server/views/account.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .container-fluid.main-content
-    .row
+    .row.mt-5
       .col-4.offset-1.history
         .font-weight-bold.box-title Exercise History
         .row
