--- a/app_server/views/calendar.pug
+++ b/app_server/views/calendar.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .container.main-content
-    table.table.table-bordered.mt-5.mb-5
+    table.table.table-bordered.my-5
       thead
         tr
           - for (let i = 0, days=['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']; i < 7; i++)
