--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .container-fluid.main-content
-    .text-center.greeting= greetingMsg
+    .text-center.greeting.mt-5= greetingMsg
     .row.d-flex.justify-content-center
       .col-4.my-programs
         .row.font-weight-bold.box-title
@@ -36,7 +36,7 @@ block content
       .col-4.nutrition
         .font-weight-bold.box-title Nutrition
         div Calories
-        div Add item 
+        div Add item
         div Carbohydrates
         div Add item
         div Protein
