--- a/app_server/views/exercises.pug
+++ b/app_server/views/exercises.pug
@@ -37,7 +37,7 @@ mixin colorCodeByGroup(exercise)
 
 block content
   .container.main-content
-    .row.justify-content-center.mb-3
+    .row.justify-content-center.mb-3.mt-5
       .display-4 Exercise Selection
 
     .row.justify-content-center.mb-3
