--- a/app_server/views/intro.pug
+++ b/app_server/views/intro.pug
@@ -1,5 +1,7 @@
 extends layout
 block content
+  //- Hide on screens smaller than md
+  .jumbotron.jumbotron-fluid.d-none.d-md-block.mb-5
   .container.main-content
     .row.mt-5
       section
