--- a/app_server/views/program_list.pug
+++ b/app_server/views/program_list.pug
@@ -1,7 +1,9 @@
 extends layout
 block content
   .container.main-content
-    .row.justify-content-center
+    .row.justify-content-center.mt-5
+      .col-12.text-center.mb-3
+        .display-4 Available Programs
       .col-12.col-md-4
         each program in programs
           #program-list.card.text-center
