--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .container.main-content
-    .row
+    .row.mt-5
       .col-12.display-4.text-center= question
 
     //- Saved Choices
