--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     block css
   body
@@ -18,6 +18,8 @@ html
           ul.navbar-nav.center.ml-auto
             li.nav-item
               a.nav-link.btn.btn-default(href='/exercises') Exercises
+            li.nav-item
+              a.nav-link.btn.btn-default(href='/dashboard/calendar') Calendar
             li.nav-item
               a.nav-link.btn.btn-default(href='/dashboard') Dashboard
             li.nav-item
@@ -34,6 +36,6 @@ html
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous")
 
-    script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/bootstrap/bootstrap.min.js')
 
     block scripts
