--- a/app_server/views/login.pug
+++ b/app_server/views/login.pug
@@ -1,15 +1,16 @@
 extends layout
 block content
   .container.main-content.form
-    .row.mt-5
-      .col-6.text-center.mx-auto
-        input(type="text" placeholder="Email")
-    .row.mt-5
-      .col-6.text-center.mx-auto
-        input(type="password" placeholder="Password")
-    .row.mt-5
-      .col-3.text-center.mx-auto
-        a.button.btn.btn-default.btn-block.p-2(href='/dashboard') Login
+    form(action='', method='post', role='form')
+      .row.mt-5
+        .col-md-6.text-center.mx-auto
+          input(type="text" placeholder="Email")
+      .row.mt-5
+        .col-md-6.text-center.mx-auto
+          input(type="password" placeholder="Password")
+      .row.mt-5
+        .col-md-4.text-center.mx-auto
+          button.btn-block.btn.btn-default.p-2 Login
     .row.mt-3
-      .col-3.text-center.mx-auto
-        a.button.btn.btn-default.btn-block.p-2(href='/register') Create Account
+      .col-md-4.text-center.mx-auto
+        a.btn-block.btn.btn-default.p-2(href='/register') Create Account
