more validating & colorcoding

--- a/app_server/views/exercises.pug
+++ b/app_server/views/exercises.pug
@@ -38,7 +38,7 @@ mixin colorCodeByGroup(exercise)
 block content
   .container.main-content
     .row.justify-content-center.mb-3.mt-5
-      .display-4 Exercise Selection
+      .display-4.text-center Exercise Selection
 
     .row.justify-content-center.mb-3
       a.btn.btn-default(href='/exercises/add') Add New
