--- a/app_public/src/app/exercise-list/exercise-list.component.html
+++ b/app_public/src/app/exercise-list/exercise-list.component.html
@@ -1,7 +1,9 @@
-<div class="card">
+<div id="exercise-list-component" class="card">
   <div class="card-block">
     <div class="row justify-content-center mb-3 mt-5">
-      <div class="display-4 text-center">Exercise Selection</div>
+      <div class="col-12">
+        <div class="display-4 text-center white-text">Exercise Selection</div>
+      </div>
     </div>
     <div class="row justify-content-center mb-3"><a class="btn btn-default" href="/exercises/add">Add New</a></div>
     <div class="row justify-content-center">
