--- a/app_server/views/intro.pug
+++ b/app_server/views/intro.pug
@@ -9,4 +9,4 @@ block content
     .row.mt-5
       .col.text-center
         a.button.btn.btn-default.btn-lg.my-2.p-3(href="/qnr1") Find your workout program
-        a.button.btn.btn-default.btn-lg.my-2.p-3(href="/program_list") See all programs
+        a.button.btn.btn-default.btn-lg.my-2.p-3(href="/program-list") See all programs
