--- a/app_server/views/login.pug
+++ b/app_server/views/login.pug
@@ -13,4 +13,4 @@ block content
           button.btn-block.btn.btn-default.p-2 Login
     .row.mt-3
       .col-md-4.text-center.mx-auto
-        a.btn-block.btn.btn-default.p-2(href='/register') Create Account
+        a.btn-block.btn.btn-default.p-2(href='/register-form') Create Account
