--- a/app_server/views/exercise-list.pug
+++ b/app_server/views/exercise-list.pug
@@ -45,7 +45,7 @@ block content
 
     .row
       - if (inserted == 'true')
-        .alert.alert-success(role='alert') Exercises added!
+        .alert.alert-success(role='alert') Exercise added!
 
     .row.justify-content-center
       .col-12.col-md-8
