--- a/app_server/views/qnr-end.pug
+++ b/app_server/views/qnr-end.pug
@@ -11,7 +11,7 @@ block content
       //- Choices
     .row.justify-content-center.mb-5
       a.option.btn.btn-lg.qnr-btn.mx-5(href='dashboard/calendar')= recommended_program
-      a.option.btn.btn-lg.qnr-btn.mx-5(href='program_list') See All Programs
+      a.option.btn.btn-lg.qnr-btn.mx-5(href='program-list') See All Programs
 
     //- Prev/Next Btns
     .row
