Registration form works and redirects to login on success

--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -16,8 +16,8 @@ block content
           .col-12.input-group
             .input-group-prepend
               span.input-group-text#inputGroup-sizing-default Name:
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='first' name='first-name')
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last' name='last-name')
+            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='first' name='firstName')
+            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last' name='lastName')
         //- Email
         .row.mb-5
           .col-12.input-group
@@ -27,8 +27,8 @@ block content
         //- Password
         .row.mb-2
           .col-12.input-group
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='pw')
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pw-confirm')
+            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='password')
+            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pwConfirm')
 
         .row.mb-5
           .col-12 Use 8 or more characters with a mix of letters, numbers, and symbols
