register case errors

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -23,7 +23,7 @@ html
             li.nav-item
               a.nav-link.btn.btn-default(href='/dashboard') Dashboard
             li.nav-item
-              a.nav-link.btn.btn-default(href='/login') Login
+              a.nav-link.btn.btn-default(href='/login-form') Login
             li.nav-item
               a.nav-link.btn.btn-default(href='/register-form') Register
 
