--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -6,8 +6,13 @@ block content
         .display-4.text-center.mb-4 Create Your QuickFit Account
     form.row(action='', method='post', role='form')
       .col-12.text-center
-        - if (error == 'val')
-          .alert.alert-danger(role='alert') Fields required, please try again
+        case error
+          when 'password_confirm_err'
+            .alert.alert-danger(role='alert') Passwords do not match!
+          when 'postdata_incomplete'
+            .alert.alert-danger(role='alert') All fields required!
+          when 'validation_error'
+            .alert.alert-danger(role='alert') Validation error...
 
       //- Left hand side.
       .col-md-6
