Register & Login stuff

--- a/app_server/views/login-form.pug
+++ b/app_server/views/login-form.pug
@@ -4,13 +4,13 @@ block content
     form(action='', method='post', role='form')
       .row.mt-5
         .col-md-6.text-center.mx-auto
-          input(type="text" placeholder="Email")
+          input(type='text' placeholder='Email')
       .row.mt-5
         .col-md-6.text-center.mx-auto
-          input(type="password" placeholder="Password")
+          input(type='password' placeholder='Password')
       .row.mt-5
         .col-md-4.text-center.mx-auto
-          button.btn-block.btn.btn-default.p-2 Login
+          button.btn-block.btn.btn-blue.p-2 Login
     .row.mt-3
       .col-md-4.text-center.mx-auto
         a.btn-block.btn.btn-default.p-2(href='/register-form') Create Account
