--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -21,19 +21,21 @@ block content
           .col-12.input-group
             .input-group-prepend
               span.input-group-text#inputGroup-sizing-default Name:
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='first' name='firstName')
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last' name='lastName')
+            input.form-control(required type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='first' name='firstName')
+            input.form-control(required type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='last' name='lastName')
+
         //- Email
         .row.mb-5
           .col-12.input-group
             .input-group-prepend
               span.input-group-text#inputGroup-sizing-default Email:
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='example@domain.com' name='email')
+            input.form-control(required type='email' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='example@domain.com' name='email')
+
         //- Password
         .row.mb-2
           .col-12.input-group
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='password')
-            input.form-control(type='text' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pwConfirm')
+            input.form-control(required type='password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='password')
+            input.form-control(required type='password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pwConfirm')
 
         .row.mb-5
           .col-12 Use 8 or more characters with a mix of letters, numbers, and symbols
@@ -43,4 +45,7 @@ block content
 
       //- Submit
       .col-12.text-center
-        button.col-md-4.btn.btn-default Sign up
+        button.col-md-4.btn.btn-blue Sign up
+
+    .col-12.text-center.mt-4
+      a.btn.btn-default.col-md-4(href='/login-form') Log in
