--- a/app_server/views/login-form.pug
+++ b/app_server/views/login-form.pug
@@ -4,10 +4,10 @@ block content
     form(action='', method='post', role='form')
       .row.mt-5
         .col-md-6.text-center.mx-auto
-          input(type='text' placeholder='Email')
+          input(type='text' autocomplete='username' placeholder='Email')
       .row.mt-5
         .col-md-6.text-center.mx-auto
-          input(type='password' placeholder='Password')
+          input(type='password' autocomplete='current-password' placeholder='Password')
       .row.mt-5
         .col-md-4.text-center.mx-auto
           button.btn-block.btn.btn-blue.p-2 Login
