--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -29,13 +29,13 @@ block content
           .col-12.input-group
             .input-group-prepend
               span.input-group-text#inputGroup-sizing-default Email:
-            input.form-control(required type='email' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='example@domain.com' name='email')
+            input.form-control(required type='email'  autocomplete='username' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='example@domain.com' name='email')
 
         //- Password
         .row.mb-2
           .col-12.input-group
-            input.form-control(required type='password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='password')
-            input.form-control(required type='password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pwConfirm')
+            input.form-control(required type='password' autocomplete='new-password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='password' name='password')
+            input.form-control(required type='password' autocomplete='new-password' aria-label='Sizing example input' describedby='inputGroup-sizing-default' placeholder='confirm' name='pwConfirm')
 
         .row.mb-5
           .col-12 Use 8 or more characters with a mix of letters, numbers, and symbols
