--- a/app_public/src/styles.css
+++ b/app_public/src/styles.css
@@ -1,1 +1,43 @@
+:root {
+  --portal-orange-light: #FF9A00;
+  --portal-orange-dark: #FF5D00;
+  --portalentrance: #005DDF;
+  --portal-blue: #D5DBEB;
+
+  --waiting-room: #D5D0CA;
+  --bones: #C8C5C0;
+  --along-the-shoreline: #BEBBB6;
+  --steel-blue-grey: #60737A;
+
+  --dissipate: #294D67;
+  --dark: #1B1B1B;
+}
+
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* Have extra space at bottom so that you can scroll down past the fixed footer.
+   Otherwise it could hide content. */
+html {
+  margin-bottom: 300px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+  color: black;
+  background-color: var(--waiting-room);;
+}
+
+/* You can add global styles to this file, and also import other style files */
+.component {
+  background-color: var(--portal-blue);;
+  padding: 2em 1em;
+  box-shadow: 0 .5rem 1rem #00000026 !important;
+  border-radius: 1rem;
+}
