--- a/app_public/src/app/framework/framework.component.html
+++ b/app_public/src/app/framework/framework.component.html
@@ -1,7 +1,7 @@
 <!-- NAVIGATION BAR -->
 <nav class="navbar navbar-expand-md">
   <div class="container">
-    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" id="home-link" class="nav-link" >home</a>
+    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" id="home-link" class="nav-link"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
