--- a/app_public/src/styles.css
+++ b/app_public/src/styles.css
@@ -1,7 +1,8 @@
 :root {
   --portal-orange-light: #FF9A00;
   --portal-orange-dark: #FF5D00;
-  --portalentrance: #005DDF;
+  --portal-entrance: #005DDF;
+  --deep-sky-blue: #00A2FF;
   --portal-blue: #D5DBEB;
 
   --waiting-room: #D5D0CA;
