--- a/app_public/src/app/exercise-list/exercise-list.component.html
+++ b/app_public/src/app/exercise-list/exercise-list.component.html
@@ -1,6 +1,6 @@
 <app-page-header [content]="pageContent.header"></app-page-header>
 <div class="component">
-<div class="row justify-content-center mb-3"><a class="btn btn-default" href="/exercise-list/add">Add New</a></div>
+<div class="row justify-content-center mb-3"><a class="btn btn-default" href="/exercise-list/exercise-form">Add New</a></div>
   <div class="row justify-content-center">
     <div class="col-12 col-md-8">
       <div class="error alert" style="display: none;"></div>
