--- a/app_server/views/calendar.pug
+++ b/app_server/views/calendar.pug
@@ -1,7 +1,37 @@
 extends layout
+
+mixin printExercise(exercise)
+  td= exercise.name
+  td= exercise.equip
+  td= exercise.group
+
+mixin colorCodeByGroup(exercise)
+  case exercise.group
+    when "Chest"
+      tr.bg-chest
+        +printExercise(exercise)
+    when "Triceps"
+      tr.bg-triceps
+        +printExercise(exercise)
+    when "Upper back"
+      tr.bg-upper-back
+        +printExercise(exercise)
+    when "Biceps"
+      tr.bg-biceps
+        +printExercise(exercise)
+    when "Shoulders"
+      tr.bg-shoulders
+        +printExercise(exercise)
+    when "Core"
+      tr.bg-core
+        +printExercise(exercise)
+    when "Lower body"
+      tr.bg-lower-body
+        +printExercise(exercise)
 block css
   //- When CDN is used, the files are blocked by client. I think toggling CORS may fix
   link(rel='stylesheet' href='/stylesheets/calendar/tui-calendar.css')
+  link(rel='stylesheet' href='https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.css')
   link(rel='stylesheet' href='/stylesheets/calendar.css')
 block content
   .container.main-content
@@ -28,6 +58,25 @@ block content
       span#renderRange.render-range
     #calendar
   //- TODO: Insert modals here (one for clicking on an existing exercise and one for adding an exercise to day)
+  #modalAddExercise.modal.fade(tabindex='-1' role='dialog' aria-labelledby='modalAddExerciseTitle' aria-hidden='true')
+    .modal-dialog.modal-lg.modal-dialog-centered(role='document')
+      .modal-content
+        .modal-header
+          h5#modalAddExerciseLongTitle.modal-title Add an Exercise
+          button.close(type='button' data-dismiss='modal' aria-label='Close')
+            span(aria-hidden='true') &times;
+        .modal-body
+          table#tableExercises.hover.row-border
+            thead
+              tr
+                th Name
+                th Equipment
+                th Group
+            tbody
+              each exercise in exercises
+                +colorCodeByGroup(exercise)
+        .modal-footer
+          button.btn.btn-default(type='button' data-dismiss='modal') Close
 block scripts
   //- Pass program data through a script so that it is accessible as a variable in scripts
   script.
@@ -37,4 +86,5 @@ block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/chance/1.0.13/chance.min.js")
   script(src="/javascripts/calendar/tui-calendar.js")
+  script(src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js")
   script(src="/javascripts/calendar.js")
