--- a/app_server/views/register-form.pug
+++ b/app_server/views/register-form.pug
@@ -13,6 +13,8 @@ block content
             .alert.alert-danger(role='alert') All fields required!
           when 'validation_error'
             .alert.alert-danger(role='alert') Validation error...
+          when 'email_taken'
+            .alert.alert-danger(role='alert') Email has already been registered
 
       //- Left hand side.
       .col-md-6
